ecmascript/parser/tests/test262-error-references/fail/783865dd3a3c2200.module.js.stderr
error: Expected ident
 --> $DIR/tests/test262-parser/fail/783865dd3a3c2200.module.js:1:17
  |
1 | export function () {}
  |                 ^

